# swagger.yaml
@@ -2,41 +2,73 @@ basePath: /
 consumes:
 - application/json
 definitions:
+  GenericError:
+    description: Generic Error is a generic error message returned by a server
+    properties:
+      message:
+        type: string
+        x-go-name: Message
+    type: object
+    x-go-package: github.com/moewiz/go-microservice/handlers
   Product:
-    description: |-
-      Product defines the structure for an API endpoint
-      json
-      validator
+    description: Product defines the structure for an API endpoint
     properties:
       description:
+        description: the description for this product
+        maxLength: 10000
         type: string
         x-go-name: Description
       id:
+        description: the id for this product
         format: int64
+        minimum: 1
         type: integer
+        uniqueItems: true
         x-go-name: ID
       name:
+        description: the name for this product
+        maxLength: 255
         type: string
         x-go-name: Name
       price:
+        description: the price for the product
         format: float
+        minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: the SKU for the product
+        pattern: '[a-zA-Z]+-[0-9]+-[0-9]+'
         type: string
         x-go-name: SKU
+    required:
+    - id
+    - name
+    - price
+    - sku
     type: object
     x-go-package: github.com/moewiz/go-microservice/data
+  ValidationError:
+    description: ValidationError is a collection of validation error messages
+    properties:
+      messages:
+        items:
+          type: string
+        type: array
+        x-go-name: Messages
+    type: object
+    x-go-package: github.com/moewiz/go-microservice/handlers
 info:
   contact:
     email: meo.wizard@gmail.com
     name: Khoa Nguyen
     url: http://github.com/moewiz
   description: |-
-    Documentation for Product API
+    This application provides the RESTful API service
+    to manage product
 
     Schemas: http
-  title: of Product API
+  title: Product API
   version: 1.0.0
 paths:
   /products:
@@ -46,13 +78,113 @@ paths:
       responses:
         "200":
           $ref: '#/responses/productsResponse'
+        "500":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    post:
+      description: Create a new product
+      operationId: createProduct
+      parameters:
+      - description: |-
+          Product data structure to Create or Update.
+          Note: the id fielld is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      responses:
+        "201":
+          $ref: '#/responses/productResponse'
+        "400":
+          $ref: '#/responses/errorValidation'
+        "422":
+          $ref: '#/responses/errorValidation'
+        "500":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+  /products/{id}:
+    delete:
+      description: Delete the product from the database
+      operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "204":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "500":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    get:
+      description: Return a single product from the database
+      operationId: listSingle
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "500":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    put:
+      description: Update the product
+      operationId: updateProduct
+      parameters:
+      - description: |-
+          Product data structure to Create or Update.
+          Note: the id fielld is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "204":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "500":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
 produces:
 - application/json
 responses:
+  errorResponse:
+    description: Generic error message returnewd as a string
+    schema:
+      $ref: '#/definitions/GenericError'
+  errorValidation:
+    description: Validation errors defined as an array of strings
+    schema:
+      $ref: '#/definitions/ValidationError'
+  noContentResponse:
+    description: No content is returned by this API endpoint
+  productResponse:
+    description: Data structure representing a signle product
+    schema:
+      $ref: '#/definitions/Product'
   productsResponse:
-    description: A list of products returns in the response
+    description: A list of products
     schema:
       items:
         $ref: '#/definitions/Product'
